# SH-wynntracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/router/: players.py  stats.py
backend/app/services/: migration.py  tracker.py  wynncraft_api.py
backend/scripts/: migrate_parquet.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CharacterCard.tsx  CharacterSearch.tsx  CollapsibleSection.tsx  ComparisonChart.tsx  Layout.tsx  MultiCharacterChart.tsx  ProfessionIcon.tsx  QuestsList.tsx  SessionList.tsx  SkeletonLoader.tsx  SkillIcon.tsx  StatIcon.tsx  StatsChart.tsx  StatsDashboard.tsx  TimeRangePicker.tsx
frontend/src/hooks/: usePageVisibility.ts  useUpdateNotification.tsx
frontend/src/pages/: CharacterPage.tsx  HomePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: dataDecimation.ts
src/: main.py
